    ADDED: sending more than one file in e-mail is possible
    ADDED: submenus for categories in UserAction menu and context menu
    ADDED: character encoding for content search
    ADDED: select remote encoding for krarc
    ADDED: new synchronizer shortcuts for modifying the synchronizer tasks
    ADDED: credit for Václav in the about box

    FIXED: [ 1638817 ] toolbar loses orientation when modified
    FIXED: [ 1578310 ] can't open ISO image by symbolic link
    FIXED: enabled KRename on remote files
    FIXED: Right arrow in the detailed view can now go even inside iso files
    FIXED: Konfigurator: Dependency lists are now scrollable
    FIXED: Filter: Don't list comments in user/group chooser

    REMOVED: Clear location button (In KDE4 it is part of the KLineEdit).
           Thanks Fathi Boudra for the patch.

    I18N: Updated Ukrainian translation (thanks to Yuri Chornoivan)
    I18N: Updated French translation (thanks Tourneur Henry-Nicolas)

Codebase in sync with the KDE3 1.90.0 release "Power Stone"
===========================================================

    FIXED: Current working directory not returned in populateVfsList
    FIXED: Eject DVD with right-click menu
    FIXED: Actionman, sometimes the command field is empty (the text was rolled),
    FIXED: GCC 4.3: missing #includes thanks to Fathi Boudra

     I18N: Updated Catalan translation (thanks Joaquim Perez)
     I18N: Updated French translation (thanks Tourneur Henry-Nicolas)


Codebase in sync with the KDE3 1.80.0 release "Final 3rd Stone"
===============================================================

    FIXED: searcher doesn't always find content in binary files
    FIXED: [ 1619452 ] Profile doesn't save status of sync-browse mode
    FIXED: [ 1681270 ] right clicking pops context menu immediately
    FIXED: [ 1645179 ] shortcut keys are not sent to the terminal
    FIXED: [ 1736496 ] always sort dirs by name not working

     I18N: Updated Hungarian translation